objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>Dean_Name__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Dean Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dean__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dean</label>
        <referenceTo>University_employee__c</referenceTo>
        <relationshipLabel>Faculties</relationshipLabel>
        <relationshipName>Faculties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_Cost_Sum__c</fullName>
        <label>Education Cost Sum</label>
        <summarizedField>Academic_department__c.Education_Cost_Sum__c</summarizedField>
        <summaryForeignKey>Academic_department__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Employees_Number__c</fullName>
        <label>Employees Number</label>
        <summarizedField>Academic_department__c.Employees_number__c</summarizedField>
        <summaryForeignKey>Academic_department__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Faculty_Name__c</fullName>
        <label>Faculty Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <formula>Education_Cost_Sum__c -  Salaries_Sum__c -  Scholarship_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salaries_Sum__c</fullName>
        <label>Salaries Sum</label>
        <summarizedField>Academic_department__c.Salaries_Sum__c</summarizedField>
        <summaryForeignKey>Academic_department__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scholarship_Sum__c</fullName>
        <label>Scholarship Sum</label>
        <summarizedField>Academic_department__c.Scholarships_Sum__c</summarizedField>
        <summaryForeignKey>Academic_department__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Students_Number__c</fullName>
        <label>Students Number</label>
        <summarizedField>Academic_department__c.Students_Number__c</summarizedField>
        <summaryForeignKey>Academic_department__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>